--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+panic-message = "0.3.0"
 rand = "0.8.5"
+sdl2 = { version = "0.36.0", features = ["bundled"] }
